--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -42,7 +42,7 @@ dependencies {
     compile localGroovy()
     testCompile 'junit:junit:4.11'
     testCompile "org.easytesting:fest-assert-core:2.0M10",
-            testCompile('org.spockframework:spock-core:0.7-groovy-1.8')
+    testCompile('org.spockframework:spock-core:0.7-groovy-' + (groovy.lang.GroovySystem.getVersion().substring(0,3)))
     testCompile 'xmlunit:xmlunit:1.4'
     deployerJars 'org.apache.maven.wagon:wagon-webdav:1.0-beta-2'
 
