forgot to check this in previously - this converts new-style beans back to maps

--- a/example/build.gradle
+++ b/example/build.gradle
@@ -17,7 +17,6 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'oozie'
 
-
 oozie {
     def jobTracker = "http://jobtracker"
     def namenode = "http://namenode"
@@ -190,3 +189,5 @@ oozie {
     jobXML = comong_configs
     outputDir = file("$projectDir/workflow")
 }
+
+task oozieWorkflow(type: org.github.mansur.oozie.tasks.OozieWorkflowTask)
